# TiaLynn

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  default.yaml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: AIRI_STUDY.md  ARCHITECTURE.md  ARCHITECTURE_MOTION_SYSTEM.md  DECISIONS.md  M0_COMPLETION.md  M0_INVENTORY.md  PRD.md  RELEASE_v0.13.md  RELEASE_v0.14.md  RELEASE_v0.15.md  RELEASE_v0.16.md  RELEASE_v0.17.md  RELEASE_v0.18.md  RELEASE_v0.19.md  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  tray.rs  window.rs
src-tauri/src/avatar/: commands.rs  mod.rs  models.rs  window.rs
src-tauri/src/brain/: chat.rs  mod.rs
src-tauri/src/brain/memory/: commands.rs  distill.rs  embed.rs  mod.rs  store.rs
src-tauri/src/brain/persona/: loader.rs  mod.rs
src-tauri/src/brain/providers/: anthropic.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/commands/: chat.rs  config.rs  distill.rs  memory.rs  mod.rs  models.rs  motion.rs  sidecar.rs  soul.rs  stt.rs  system.rs  tts.rs  window.rs
src-tauri/src/core/: embed.rs  llm.rs  memory.rs  mod.rs  motion.rs  sidecar.rs  soul.rs  stt.rs  tts.rs
src-tauri/src/hands/: mod.rs
src-tauri/src/infra/: config.rs  eventbus.rs  mod.rs  soul_commands.rs  system.rs  tray.rs
src-tauri/src/presence/: mod.rs  sidecar_commands.rs  sidecar_mgr.rs  stt.rs  stt_commands.rs  tts.rs  tts_commands.rs
(+395 files in other folders)
