[package]
name = "tialynn"
version = "0.1.0"
description = "TiaLynn — 离线本地的 Live2D 桌面伴侣"
authors = ["wangzhenyu <asbstruthe@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tialynn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"

rusqlite = { version = "0.32", features = ["bundled"] }

thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

notify = "6"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
device_query = "2"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
